--- a/fdphd.bib
+++ b/fdphd.bib
@@ -889,8 +889,24 @@ Terahertz spectroscopy of ferroelectrics and related materials
   publisher={Optical Society of America}
 }
 /*}}}*/
-% TODO 
-% Gibbons 2009 swissroll metamaterial
+@inproceedings{gibbons2010scalable,
+  title={Scalable cylindrical metallo-dielectric metamaterials},
+  author={Gibbons, Nicholas and Kolle, Mathias and Baumberg, Jeremy J and Steiner, Ullrich},
+  booktitle={Quantum Electronics and Laser Science Conference},
+  pages={JWA3},
+  year={2010},
+  organization={Optical Society of America}
+}
+@article{wang2011fiber,
+  title={Fiber metamaterials with negative magnetic permeability in the terahertz},
+  author={Wang, Anna and Tuniz, Alessandro and Hunt, Peter G and Pogson, Elise M and Lewis, Roger A and Bendavid, Avi and Fleming, Simon C and Kuhlmey, Boris T and Large, Maryanne CJ},
+  journal={Optical Materials Express},
+  volume={1},
+  number={1},
+  pages={115--120},
+  year={2011},
+  publisher={Optical Society of America}
+}
 % -- combining Dielectric and Metal in 1D PhC --
 % Contopaganos 1999 ELMG props of per ML of metal
 % ZamudioLara 2006 Characterisation of metal diel PhCs
